# cann_ops_adv

./: .clang-format  .gitignore  CMakeLists.txt  OWNERS  README.en.md  README.md  blacklist.txt  build.sh  classify_rule.yaml  version.info
.gitee/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml  question.yml
cmake/: OWNERS  config.cmake  config_utest.cmake  func.cmake  func_examples.cmake  func_utest.cmake  intf_pub.cmake  intf_pub_utest.cmake
cmake/scripts/: check_version_compatible.py  parse_changed_files.py  prepare.sh
cmake/scripts/utest/: gen_tiling_data_stub.py
docs/: FFN.md  FFNV2.md  FFNV3.md  FlashAttentionScore.md  FlashAttentionScoreGrad.md  FlashAttentionScoreGradV2.md  FlashAttentionScoreV2.md  FlashAttentionUnpaddingScoreGrad.md  FlashAttentionUnpaddingScoreGradV2.md  FlashAttentionVarLenScore.md  FlashAttentionVarLenScoreV2.md  FusedInferAttentionScore.md  FusedInferAttentionScoreV2.md  IncreFlashAttention.md  IncreFlashAttentionV2.md  IncreFlashAttentionV3.md  IncreFlashAttentionV4.md  PromptFlashAttention.md  PromptFlashAttentionV2.md  PromptFlashAttentionV3.md
docs/common/: FFN算子设计介绍.md  IFA算子设计介绍.md  PFA算子设计介绍.md  cmake编译参数说明.md  sparse_mode参数说明.md  数据格式.md  编译与运行样例.md
examples/transformer/: CMakeLists.txt  README.md
examples/transformer/ffn/: CMakeLists.txt  ffn_generate_data.py  ffn_print_result.py  ffn_utils.h  run_ffn_case.sh  test_ffn.cpp  test_ffn_v2.cpp  test_ffn_v3.cpp  test_ffn_v3_quant.cpp
examples/transformer/flash_attention_score/: CMakeLists.txt
examples/transformer/flash_attention_score_grad/: CMakeLists.txt
examples/transformer/fused_infer_attention_score/: CMakeLists.txt  run_fia_case.sh  test_fused_infer_attention_score.cpp  test_fused_infer_attention_score_v2.cpp  test_fused_infer_attention_score_v2_ifa_Lse.cpp  test_fused_infer_attention_score_v2_ifa_PA.cpp  test_fused_infer_attention_score_v2_ifa_antiquant.cpp  test_fused_infer_attention_score_v2_ifa_leftpad.cpp  test_fused_infer_attention_score_v2_ifa_postquant.cpp  test_fused_infer_attention_score_v2_ifa_system_prefix.cpp
examples/transformer/incre_flash_attention/: CMakeLists.txt  run_ifa_case.sh  test_incre_flash_attention.cpp  test_incre_flash_attention_v2.cpp  test_incre_flash_attention_v3.cpp  test_incre_flash_attention_v4.cpp
examples/transformer/prompt_flash_attention/: CMakeLists.txt  run_pfa_case.sh  test_prompt_flash_attention.cpp  test_prompt_flash_attention_v2.cpp  test_prompt_flash_attention_v3.cpp
examples/transformer/scripts/: run_fa_case.sh
src/transformer/ffn/: ffn.cpp  ffn_antiquant_msd.h  ffn_quant.h
src/transformer/ffn/ophost/: CMakeLists.txt  aclnn_ffn.cpp  aclnn_ffn.h  aclnn_ffn_v2.h  aclnn_ffn_v3.h  fallback_ffn.cpp  ffn_def.cpp  ffn_proto.cpp  ffn_tiling.cpp
src/transformer/flash_attention_score/: flash_attention_score.cpp  flash_attention_score_bn2gs1s2_b.h  flash_attention_score_common.h  flash_attention_score_drop_mask_adapter.h  flash_attention_score_s1_bn2gs1.h  flash_attention_score_s1s2_bn2gs1.h  flash_attention_var_len_score.h
src/transformer/flash_attention_score_grad/: flash_attention_score_grad.cpp  flash_attention_score_grad_bngs1s2_b.h  flash_attention_score_grad_ngs1s2_bn.h  flash_attention_score_grad_post.h  flash_attention_score_grad_pre.h  flash_attention_score_grad_s1s2_bn2.h  flash_attention_score_grad_s1s2_bn2gs1s2.h  (+1 more)
src/transformer/flash_attention_score_grad/ophost/: CMakeLists.txt  aclnn_flash_attention_score_grad.cpp  flash_attention_score_grad.cpp  flash_attention_score_grad_def.cpp  flash_attention_score_grad_proto.cpp  flash_attention_score_grad_tiling.cpp  flash_attention_score_grad_tiling.h  flash_attention_score_grad_tiling_bngs1s2_b.cpp  flash_attention_score_grad_tiling_bngs1s2_b_def.h  flash_attention_score_grad_tiling_common.cpp  flash_attention_score_grad_tiling_common.h  flash_attention_score_grad_tiling_ngs1s2_bn.cpp  flash_attention_score_grad_tiling_ngs1s2_bn_def.h  flash_attention_score_grad_tiling_s1s2_bn2.cpp  flash_attention_score_grad_tiling_s1s2_bn2.h  flash_attention_score_grad_tiling_s1s2_bn2_def.h  flash_attention_score_grad_tiling_s1s2_bn2gs1s2.cpp  flash_attention_score_grad_tiling_s1s2_bn2gs1s2.h  flash_attention_score_grad_tiling_s1s2_bn2gs1s2_def.h  flash_attention_score_grad_tiling_s1s2_bn2gs1s2_sab.cpp  flash_attention_score_grad_tiling_s1s2_bn2gs1s2_sab.h  flash_attention_score_grad_tiling_s1s2_bn2gs1s2_sab_def.h  flash_attention_score_grad_tiling_unpadded_attension.cpp
src/transformer/fused_infer_attention_score/ophost/: CMakeLists.txt  aclnn_fused_infer_attention_score.cpp  aclnn_fused_infer_attention_score.h  aclnn_fused_infer_attention_score_v2.cpp  aclnn_fused_infer_attention_score_v2.h  fallback_fused_infer_attention_score.cpp  fused_infer_attention_score_def.cpp  fused_infer_attention_score_tiling.cpp  fused_infer_attention_score_tiling.h  fused_infer_attention_score_tiling_input_index.h  fused_infer_attention_score_tiling_register.cpp
src/transformer/prompt_flash_attention/ophost/: CMakeLists.txt  aclnn_prompt_flash_attention.cpp  aclnn_prompt_flash_attention.h  aclnn_prompt_flash_attention_inner.cpp  aclnn_prompt_flash_attention_inner.h  aclnn_prompt_flash_attention_v2.cpp  aclnn_prompt_flash_attention_v2.h  aclnn_prompt_flash_attention_v3.cpp  aclnn_prompt_flash_attention_v3.h  fallback_prompt_flash_attention.cpp  prompt_flash_attention.h  prompt_flash_attention_base_aclnn.cpp  prompt_flash_attention_def.cpp  prompt_flash_attention_proto.cpp  prompt_flash_attention_tiling.cpp  prompt_flash_attention_tiling.h  prompt_flash_attention_tiling_const.h  prompt_flash_attention_tiling_context.h  prompt_flash_attention_tiling_register.cc  prompt_flash_attention_tiling_struct.h
src/utils/: CMakeLists.txt
src/utils/inc/: fallback.h  (+1 more)
tests/ut/ops_test/utils/: CMakeLists.txt
tests/ut/ops_test/utils/inc/tests/utils/: case.h  context.h  control_info.h  log.h  op_info.h  platform.h
tests/ut/ops_test/utils/src/: aclnn_tensor.cpp  case.cpp  context.cpp  context_intf.cpp  control_info.cpp  expect_info.cpp  op_info.cpp  platform.cpp  tensor_intf.cpp
(+125 files in other folders)
